[project]
name = "chatbotdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.64",
    "ipykernel>=7.1.0",
    "lag>=0.0.3",
    "langchain>=0.3.27",
    "langchain-aws==0.2.15",
    "pyyaml>=6.0.3",
    "streamlit>=1.51.0",
    "transformers>=4.57.1",
]
